# scotty-facts

./: LICENSE  Main.hs  README.md  scotty-facts.cabal
